--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@
 
 buildscript {
     ext.kotlin_version = '1.8.22'
+    ext.navigationVersion = "2.5.3"
     repositories {
         google()
         jcenter()
@@ -26,6 +27,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:7.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.10'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
